--- a/userpatches/config-ravenos.conf
+++ b/userpatches/config-ravenos.conf
@@ -4,10 +4,12 @@ display_alert "RavenOS :: Initial Configuration"
 
 ENABLE_EXTENSIONS=ravenos
 
+BOARD="${BOARD:-uefi-x86}"
 KLIPPER_FRONTEND="${KLIPPER_FRONTEND:-fluidd}"
 KLIPPER_VARIANT="${KLIPPER_VARIANT:-kalico}"
 
-IMAGE_VERSION="0.0.1-${KLIPPER_VARIANT}-${KLIPPER_FRONTEND}"
+IMAGE_VERSION="${IMAGE_VERSION:-0.0.0}"
+EXTRA_IMAGE_SUFFIX="-${KLIPPER_VARIANT}"
 
 VENDOR="RavenOS"
 VENDORURL="https://vorondesign.com/"
