Add fluidd-config, tweak github actions

--- a/userpatches/config-ravenos.conf
+++ b/userpatches/config-ravenos.conf
@@ -37,4 +37,8 @@ USERNAME=raven
 ROOTPWD=voron
 EXTRA_BSP_NAME="-ravenos"
 
+BOOT_FS_LABEL=boot
+UEFI_FS_LABEL=uefi
+ROOT_FS_LABEL=ravenos
+
 PESTER_TERMINAL=no
